// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyring Derives correct keys from seed 1`] = `
Object {
  "content": Object {
    "publicKeys": Object {
      "HqWJATWq82EABVs": "zQ3shRHw1ZYQRjdojgJftsbPuAYaJp1k1HHqWJATWq82EABVs",
      "va4hhib8MaZU2bn": "z6LSmA6mRJBttYqSVLq7zr5NMZJmGu7Urva4hhib8MaZU2bn",
    },
  },
  "deterministic": true,
  "metadata": Object {
    "controllers": Array [
      "did:key:zQ3sha3tk9URYc9Pu3Hb6dHyhWXjVKCZbfGosg4GMQdQE72DD",
    ],
    "tags": Array [
      "3id",
    ],
  },
}
`;

exports[`Keyring Derives correct keys from seed 2`] = `
Object {
  "content": Object {
    "publicKeys": Object {
      "HqWJATWq82EABVs": "zQ3shRHw1ZYQRjdojgJftsbPuAYaJp1k1HHqWJATWq82EABVs",
      "va4hhib8MaZU2bn": "z6LSmA6mRJBttYqSVLq7zr5NMZJmGu7Urva4hhib8MaZU2bn",
    },
  },
  "metadata": Object {
    "controllers": Array [
      "did:key:zQ3sha3tk9URYc9Pu3Hb6dHyhWXjVKCZbfGosg4GMQdQE72DD",
    ],
  },
}
`;

exports[`Keyring Derives correct keys from seed 3`] = `
Uint8Array [
  140,
  224,
  120,
  198,
  47,
  177,
  130,
  80,
  120,
  20,
  9,
  162,
  176,
  48,
  126,
  227,
  114,
  6,
  253,
  10,
  59,
  176,
  221,
  134,
  48,
  46,
  65,
  111,
  227,
  188,
  5,
  93,
]
`;

exports[`Keyring Derives correct keys from seed 4`] = `
Uint8Array [
  240,
  228,
  194,
  247,
  108,
  88,
  145,
  110,
  194,
  88,
  242,
  70,
  133,
  27,
  234,
  9,
  29,
  20,
  212,
  36,
  122,
  47,
  195,
  225,
  134,
  148,
  70,
  27,
  24,
  22,
  225,
  59,
]
`;

exports[`Keyring Generates correct state if v03ID is set 1`] = `
Object {
  "content": null,
  "deterministic": true,
  "metadata": Object {
    "controllers": Array [
      "did:key:zQ3shnyMbHDVqqJnm6EiPJ47Vc4ivUFgcaPpEHx9GhyFT5Env",
    ],
    "tags": Array [
      "3id",
    ],
  },
}
`;

exports[`Keyring Generates correct state if v03ID is set 2`] = `
Object {
  "content": null,
  "metadata": Object {
    "controllers": Array [
      "did:key:zQ3shnyMbHDVqqJnm6EiPJ47Vc4ivUFgcaPpEHx9GhyFT5Env",
    ],
  },
}
`;
